# langgraph-agent-fundamentals

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  PLAN.md  langgraph.json  pyproject.toml  pyrightconfig.json  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
bot/: discord_bot.py  telegram_bot.py
docs/: compression-subgraph-design.md
lg-discord-bot/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
lg-discord-bot/.langgraph_api/: .langgraph_ops.pckl
lg-discord-bot/src/agent/: prompts.py  state.py
src/agent/: __init__.py  context.py  dag.py  graph.py  llm.py  logging_config.py  prompts.py  state.py  tools.py  utils.py
src/agent/compression/: __init__.py  graph.py
